--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "electron-demo",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "vue": "^3.3.8"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
+    "electron": "^27.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
+    "vite-plugin-optimizer": "^1.4.2",
+    "vue": "^3.3.8",
     "vue-tsc": "^1.8.22"
   }
 }
