--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
     "electron": "^27.1.2",
+    "electron-builder": "^24.9.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vite-plugin-optimizer": "^1.4.2",
